# tutorial

./: CMakeLists.txt  var5_lab6.cpp
inc/: functions.hpp
src/: functions.cpp
